# Sleuth

./: .gitignore  CMakeLists.txt  analyzer.cpp  analyzer.h  common.h  context.h  main.cpp  symbolic.cpp  symbolic.h
examples/: gsa-paper.cpp  interprocedural.cpp
examples/comparison/: CMakeLists.txt  patak.c  patak.cpp  run-cppcheck.sh  run-pvs.sh  run-scan-build.sh  run-sleuth.sh  run-splint.sh
examples/intraprocedural/: paper.cpp
examples/intraprocedural/control/: for.cpp  for_harder_lt.cpp  for_trivial_lt.cpp  for_trivial_ne.cpp  for_with_guard.cpp  if_guard.cpp  if_guard_cmp.cpp  if_guard_eq.cpp
examples/intraprocedural/no-control/: new.cpp  new_load.cpp  new_phi.cpp  new_simple.cpp
examples/intraprocedural/no-control-no-data/: malloc.cpp  new.cpp
examples/intraprocedural/paper/: paper_end.cpp  paper_full.cpp  paper_loop.cpp
src/: common.cpp  common.h  context.h  main.cpp  symbolic.cpp  symbolic.h
src/analyzer/: analyzer.cpp  analyzer.h  impl.cpp  impl.h  range.cpp  refine.cpp  report.cpp  sort.cpp  sort.h  split.cpp  trigger.cpp  trigger.h
src/gsa/: builder.cpp  builder.h  cond.cpp  cond.h
src/symbolic/: atomic.cpp  atomic.h  expr.cpp  expr.h  range.cpp  range.h
util-scripts/: sleuth-compile.sh
